--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+html, body {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
+#root, #app {
+  height: 100%;
+  width: 100%;
+}
